bdr.BDR.scala.error
Compilation error:
BDR:4: error: not found: value getIndication
    var msg = getIndication()
              ^